refactor(chat): 优化聊天统计和事务处理
- 移除 ApplicationChatUserStatsEntity 相关硬编码逻辑
- 添加 @Transactional(rollbackFor = Exception.class) 替代默认事务注解
- 实现原子自增访问计数，避免并发更新丢失问题
- 优化 SSE 流错误处理，统一异常传播机制
- 在 PipelineManage 中调整异常处理策略
- 添加数据库唯一索引确保统计行存在性
- 优化 PDF 解析器中的图片上传并发控制
- 更新管理员权限验证方式，从角色检查改为登录检查